--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,6 +9,7 @@ services:
     working_dir: /var/www
     volumes:
       - .:/var/www
+      - ./storage:/var/www/storage
     depends_on:
       - db
 
@@ -20,6 +21,7 @@ services:
     volumes:
       - .:/var/www
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./storage:/var/www/storage
     depends_on:
       - app
 
