--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -15,6 +15,12 @@ server {
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
     }
 
+    location /storage {
+        alias /var/www/public/storage;
+        access_log off;
+        log_not_found off;
+    }
+
     location ~ /\.ht {
         deny all;
     }
